/*plugins {
    id 'com.stehno.natives' version '0.3.1'
}
*/
subprojects {
    apply plugin: "java"
    repositories {
        mavenCentral()
    }
}

apply plugin: 'application'

mainClassName='infinity.Main'

version = "1.0.0"

applicationDefaultJvmArgs = ["-Xmx1024m", "-Xms512m", "-XX:MaxDirectMemorySize=1024m","--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"]


dependencies {
    //implementation project(":jme3-core")
    implementation "org.jmonkeyengine:jme3-core:$jmeVersion" 
    //implementation project(":jme3-desktop")
    implementation "org.jmonkeyengine:jme3-desktop:$jmeVersion"
    implementation "org.jmonkeyengine:jme3-effects:$jmeVersion"
    implementation "org.jmonkeyengine:jme3-plugins:$jmeVersion"
    //mplementation project(":jme3-lwjgl3")
    implementation "org.jmonkeyengine:jme3-lwjgl3:$jmeVersion"
    
    // https://mvnrepository.com/artifact/org.lwjgl/lwjgl
    //compile group: 'org.lwjgl', name: 'lwjgl', version: '3.2.3'

    implementation 'org.slf4j:slf4j-api:1.7.13'
    implementation 'org.apache.logging.log4j:log4j-api:2.5'
    implementation 'org.apache.logging.log4j:log4j-core:2.5'
    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.5'


    // For Lemur styles
    implementation 'org.codehaus.groovy:groovy-all:2.4.5'

    implementation "com.simsilica:lemur:$lemurVersion"
    implementation "com.simsilica:lemur-proto:$lemurProtoVersion"
    implementation "com.simsilica:lemur-props:$lemurPropsVersion"
    implementation "com.simsilica:sim-math:$simMathVersion"
    implementation "com.simsilica:sio2:$sio2Version" 
    implementation "com.simsilica:sim-ethereal:$simEtherealVersion"
    
    implementation "com.simsilica:zay-es:$zayEsVersion"
    implementation "com.simsilica:zay-es-net:$zayEsNetVersion"
    
    implementation 'com.simsilica:sim-fx:1.0.1-SNAPSHOT'

    implementation 'com.simsilica:pager:1.0.1-SNAPSHOT'
    
    //Ini4j to parse settings files
    //http://ini4j.sourceforge.net/// 
    //https://mvnrepository.com/artifact/org.ini4j/ini4j
    implementation group: 'org.ini4j', name: 'ini4j', version: '0.5.4'
    
    //Dyn4j
    //http://www.dyn4j.org/
    //implementation 'org.dyn4j:dyn4j:3.4.0'
    //implementation "org.dyn4j:dyn4j:4.0.0"
        
    implementation 'org.apache.commons:commons-math:2.2'
 
 
    // Trying this for saving/loading configs
    implementation 'com.google.code.gson:gson:2.8.2'

    
    implementation project(":mphys")
    implementation project(":mblock")
    implementation project(":mblock-physb")
    implementation project(":sio2-mblock")
    implementation project(":sio2-mphys")
    implementation project(":mworld")
           
    runtimeOnly project(":infinity:assets")     
    
    implementation project(":infinity:api") 
    
    //https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    
    //jWalkable for 2d polygonal pathfinding
    //https://github.com/implicit-invocation/jwalkable
    implementation 'com.github.implicit-invocation:jwalkable:master-SNAPSHOT'
    
    //Noise4j dungeon generation
    //https://github.com/czyzby/noise4j
    implementation 'com.github.czyzby:noise4j:0.1.0'
    
    //implementation project(":dyn4j-bin")
    
    //GDX-AI for steering behaviours
    //https://github.com/libgdx/gdx-ai
    //compile "com.badlogicgames.gdx:gdx-ai:1.8.1:sources"
    //compile "com.badlogicgames.gdx:gdx-ai:1.8.1:javadoc"
    implementation "com.badlogicgames.gdx:gdx-ai:1.8.2"
    
    //We're using a java port of http://www.angusj.com/delphi/clipper.php to do polygon boolean operations
    implementation 'de.lighti:Clipper:6.4.2'
    
    
    // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
}

jar {
    archiveBaseName = "subspace-infinity"
}

distributions {
    main {
        distributionBaseName = "subspace-infinity"
    }
}

sourceCompatibility = 1.14

project(":infinity:assets") {
    apply plugin:'java'
    
    buildDir = file("../build/assets")
    
    sourceSets {
        main {
            resources {
                srcDir '.'
                includes = [
                    "**/*.ogg", 
                    "**/*.wav", 
                    "**/*.png", 
                    "**/*.jpg", 
                    "**/*.j3md", 
                    "**/*.frag", 
                    "**/*.vert",
                    "**/*.glsllib",
                    "**/*.fnt",
                    "**/*.j3m",
                    "**/*.j3o",
                    "**/*.blocks",
                    "**/*.wa2",
                    "**/*.bmp",
                    "**/*.bm2",
                    "**/*.lvl",
                    "**/*.lvz"
                ]
            }
        }
    }    
}

